--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,7 @@ body{
     flex-direction: row;
 }
 
-h1{
-    background-color: #4d4d4db9;
-    color: #f5f5f5;
-    width: 100%;
-}
+
 
 .left{
     width: 40%;
@@ -30,6 +26,28 @@ h1{
     text-align: center;
     background-image: url(/images/leafs.avif);
     background-size: cover;
+}
+
+.title{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    background-color: #4d4d4db9;
+    color: #f5f5f5;
+    padding: 0px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
+    margin-bottom: auto;
+    margin-top: 256px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.lineImg{
+    width: 10%;
 }
 
 .right{
@@ -55,14 +73,19 @@ h1{
     flex-direction: row;
     flex-wrap: wrap;
     align-items: left;
-    justify-content: left;
+    justify-content: space-between;
     padding-left: 64px;
+    padding-right: 128px;
+    padding-bottom: 32px;
 }
+
+
 
 .infoField{
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    width: 50%;
+    width: 35%;
 }
 
 .bottom{
@@ -77,7 +100,7 @@ h1{
     border: none;
     border-radius: 5px;
     padding: 10px;
-    margin-top: 10px;
+    margin-top: 32px;
     font-size: 16px;
     cursor: pointer;
     font-weight: bold;
