--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: norseBold;
+    src: url("fonts/Norse-Bold.otf") format("opentype");
+}
+
 body{
     background-color: #f5f5f5;
     font-family: 'Roboto', sans-serif;
@@ -38,16 +43,17 @@ body{
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-size: large;
+    font-size: 64px;
     font-weight: bold;
     margin-bottom: auto;
     margin-top: 256px;
     padding-top: 5px;
     padding-bottom: 5px;
+    font-family: "norseBold";
 }
 
 .lineImg{
-    width: 10%;
+    width: 20%;
 }
 
 .right{
